force-app/main/default/objects/Container__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserved</label>
    <type>Checkbox</type>
</CustomField>