force-app/main/default/objects/Container__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>CASE( Type__c , 
 &apos;Temperature Sensitive&apos;,  IMAGE(&apos;https://techproedu-10c-dev-ed--c.develop.vf.force.com/resource/1680362386000/TemperatureSensetive?&apos;, &apos;Temperature Sensitive Picture&apos;, 100, 120)  ,

 &apos;General Purpose&apos;      ,IMAGE(&apos;https://techproedu-10c-dev-ed--c.develop.vf.force.com/resource/1680362866000/GenaralPurposeContainer?&apos;, &apos;General Purpose Picture&apos; , 100, 120 ) 
 ,

 &apos;Tank&apos;                 , IMAGE(&apos;https://techproedu-10c-dev-ed--c.develop.vf.force.com/resource/1680362984000/TankContainer?&apos;, &apos;Tank Picture&apos;  , 100, 120)  ,

null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>