force-app/main/default/objects/Container__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>Container__c</columns>
    <columns>Size__c</columns>
    <columns>Type__c</columns>
    <columns>Reserved_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>